# ParquetWriter

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ParquetWriter/: ParquetWriter.cc  ParquetWriter.hh  ParquetWriterFactory.hh  ParquetWriterModule.cc
cmake/: ParquetWriterConfig.cmake.in
tests/: CMakeLists.txt  test_parquet_writer.py  variable_generator.py
